particle_sim/particle_sim.sdk/.metadata/.plugins/org.eclipse.cdt.ui/particle_sim.build.log
02:43:21 **** Auto Build of configuration Debug for project particle_sim ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/main.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../particle_sim_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
In file included from ../src/main.c:3:0:
../src/platform.h:12:63: warning: 'struct ip_addr' declared inside parameter list will not be visible outside of this definition or declaration
 int init_platform(unsigned char *mac_ethernet_address, struct ip_addr *ipaddr, struct ip_addr *netmask);
                                                               ^~~~~~~
../src/main.c:7:77: warning: 'struct ip_addr' declared inside parameter list will not be visible outside of this definition or declaration
 void udp_get_handler(void *arg, struct udp_pcb *pcb, struct pbuf *p, struct ip_addr *addr, u16_t port) {
                                                                             ^~~~~~~
../src/main.c: In function 'main':
../src/main.c:31:24: warning: passing argument 2 of 'udp_recv' from incompatible pointer type [-Wincompatible-pointer-types]
     udp_recv(recv_pcb, udp_get_handler, NULL);
                        ^~~~~~~~~~~~~~~
In file included from ../src/platform.h:10:0,
                 from ../src/main.c:3:
../../particle_sim_bsp/ps7_cortexa9_0/include/lwip/udp.h:123:18: note: expected 'udp_recv_fn {aka void (*)(void *, struct udp_pcb *, struct pbuf *, const struct ip4_addr *, short unsigned int)}' but argument is of type 'void (*)(void *, struct udp_pcb *, struct pbuf *, struct ip_addr *, u16_t) {aka void (*)(void *, struct udp_pcb *, struct pbuf *, struct ip_addr *, short unsigned int)}'
 void             udp_recv       (struct udp_pcb *pcb, udp_recv_fn recv,
                  ^~~~~~~~
'Finished building: ../src/main.c'
' '
'Building file: ../src/platform.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/platform.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../particle_sim_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/platform.d" -MT"src/platform.o" -o "src/platform.o" "../src/platform.c"
In file included from ../src/platform.c:8:0:
../src/platform.h:12:63: warning: 'struct ip_addr' declared inside parameter list will not be visible outside of this definition or declaration
 int init_platform(unsigned char *mac_ethernet_address, struct ip_addr *ipaddr, struct ip_addr *netmask);
                                                               ^~~~~~~
../src/platform.c:177:33: warning: 'struct ip_addr' declared inside parameter list will not be visible outside of this definition or declaration
 void print_ip(char *msg, struct ip_addr *ip)  {
                                 ^~~~~~~
In file included from ../../particle_sim_bsp/ps7_cortexa9_0/include/lwip/ip_addr.h:43:0,
                 from ../../particle_sim_bsp/ps7_cortexa9_0/include/lwip/netif.h:46,
                 from ../../particle_sim_bsp/ps7_cortexa9_0/include/netif/xadapter.h:49,
                 from ../src/platform.c:3:
../src/platform.c: In function 'print_ip':
../../particle_sim_bsp/ps7_cortexa9_0/include/lwip/ip4_addr.h:199:52: error: dereferencing pointer to incomplete type 'struct ip_addr'
 #define ip4_addr1(ipaddr) (((const u8_t*)(&(ipaddr)->addr))[0])
                                                    ^
../src/platform.c:179:32: note: in expansion of macro 'ip4_addr1'
  xil_printf("%d.%d.%d.%d\r\n", ip4_addr1(ip), ip4_addr2(ip), ip4_addr3(ip), ip4_addr4(ip));
                                ^~~~~~~~~
../src/platform.c: At top level:
../src/platform.c:182:31: warning: 'struct ip_addr' declared inside parameter list will not be visible outside of this definition or declaration
 void print_ip_settings(struct ip_addr *ip, struct ip_addr *mask, struct ip_addr *gw) {
                               ^~~~~~~
../src/platform.c: In function 'print_ip_settings':
../src/platform.c:183:25: warning: passing argument 2 of 'print_ip' from incompatible pointer type [-Wincompatible-pointer-types]
  print_ip("Board IP: ", ip);
                         ^~
../src/platform.c:177:6: note: expected 'struct ip_addr *' but argument is of type 'struct ip_addr *'
 void print_ip(char *msg, struct ip_addr *ip)  {
      ^~~~~~~~
../src/platform.c:184:25: warning: passing argument 2 of 'print_ip' from incompatible pointer type [-Wincompatible-pointer-types]
  print_ip("Netmask : ", mask);
                         ^~~~
../src/platform.c:177:6: note: expected 'struct ip_addr *' but argument is of type 'struct ip_addr *'
 void print_ip(char *msg, struct ip_addr *ip)  {
      ^~~~~~~~
../src/platform.c:185:25: warning: passing argument 2 of 'print_ip' from incompatible pointer type [-Wincompatible-pointer-types]
  print_ip("Gateway : ", gw);
                         ^~
../src/platform.c:177:6: note: expected 'struct ip_addr *' but argument is of type 'struct ip_addr *'
 void print_ip(char *msg, struct ip_addr *ip)  {
      ^~~~~~~~
../src/platform.c: At top level:
../src/platform.c:188:63: warning: 'struct ip_addr' declared inside parameter list will not be visible outside of this definition or declaration
 int init_platform(unsigned char *mac_ethernet_address, struct ip_addr *ipaddr, struct ip_addr *netmask) {
                                                               ^~~~~~~
../src/platform.c:188:5: error: conflicting types for 'init_platform'
 int init_platform(unsigned char *mac_ethernet_address, struct ip_addr *ipaddr, struct ip_addr *netmask) {
     ^~~~~~~~~~~~~
In file included from ../src/platform.c:8:0:
../src/platform.h:12:5: note: previous declaration of 'init_platform' was here
 int init_platform(unsigned char *mac_ethernet_address, struct ip_addr *ipaddr, struct ip_addr *netmask);
     ^~~~~~~~~~~~~
../src/platform.c: In function 'init_platform':
../src/platform.c:189:17: error: storage size of 'gw' isn't known
  struct ip_addr gw;
                 ^~
../src/platform.c:195:17: error: storage size of 'ipaddr_dhcp' isn't known
  struct ip_addr ipaddr_dhcp;
                 ^~~~~~~~~~~
../src/platform.c:196:17: error: storage size of 'netmask_dhcp' isn't known
  struct ip_addr netmask_dhcp;
                 ^~~~~~~~~~~~
../src/platform.c:200:11: error: dereferencing pointer to incomplete type 'struct ip_addr'
     ipaddr->addr = 0;
           ^~
../src/platform.c:218:29: warning: passing argument 2 of 'xemac_add' from incompatible pointer type [-Wincompatible-pointer-types]
  if (!xemac_add(echo_netif, ipaddr, netmask, &gw, mac_ethernet_address, PLATFORM_EMAC_BASEADDR)) {
                             ^~~~~~
In file included from ../src/platform.c:3:0:
../../particle_sim_bsp/ps7_cortexa9_0/include/netif/xadapter.h:69:16: note: expected 'ip_addr_t * {aka struct ip4_addr *}' but argument is of type 'struct ip_addr *'
 struct netif * xemac_add(struct netif *netif,
                ^~~~~~~~~
../src/platform.c:218:37: warning: passing argument 3 of 'xemac_add' from incompatible pointer type [-Wincompatible-pointer-types]
  if (!xemac_add(echo_netif, ipaddr, netmask, &gw, mac_ethernet_address, PLATFORM_EMAC_BASEADDR)) {
                                     ^~~~~~~
In file included from ../src/platform.c:3:0:
../../particle_sim_bsp/ps7_cortexa9_0/include/netif/xadapter.h:69:16: note: expected 'ip_addr_t * {aka struct ip4_addr *}' but argument is of type 'struct ip_addr *'
 struct netif * xemac_add(struct netif *netif,
                ^~~~~~~~~
../src/platform.c:253:20: warning: passing argument 1 of 'print_ip_settings' from incompatible pointer type [-Wincompatible-pointer-types]
  print_ip_settings(ipaddr, netmask, &gw);
                    ^~~~~~
../src/platform.c:182:6: note: expected 'struct ip_addr *' but argument is of type 'struct ip_addr *'
 void print_ip_settings(struct ip_addr *ip, struct ip_addr *mask, struct ip_addr *gw) {
      ^~~~~~~~~~~~~~~~~
../src/platform.c:253:28: warning: passing argument 2 of 'print_ip_settings' from incompatible pointer type [-Wincompatible-pointer-types]
  print_ip_settings(ipaddr, netmask, &gw);
                            ^~~~~~~
../src/platform.c:182:6: note: expected 'struct ip_addr *' but argument is of type 'struct ip_addr *'
 void print_ip_settings(struct ip_addr *ip, struct ip_addr *mask, struct ip_addr *gw) {
      ^~~~~~~~~~~~~~~~~
../src/platform.c:196:17: warning: unused variable 'netmask_dhcp' [-Wunused-variable]
  struct ip_addr netmask_dhcp;
                 ^~~~~~~~~~~~
../src/platform.c:195:17: warning: unused variable 'ipaddr_dhcp' [-Wunused-variable]
  struct ip_addr ipaddr_dhcp;
                 ^~~~~~~~~~~
../src/platform.c:189:17: warning: unused variable 'gw' [-Wunused-variable]
  struct ip_addr gw;
                 ^~
make: *** [src/platform.o] Error 1

02:43:22 Build Finished (took 477ms)

